--- a/automated-demo-gitops/yaml-resources/gogs/gogs.yaml
+++ b/automated-demo-gitops/yaml-resources/gogs/gogs.yaml
@@ -15,7 +15,7 @@ spec:
         name: gogs
     spec:
       containers:
-      - image: quay.io/mavazque/gogs:0.11.91
+      - image: docker.io/gogs/gogs:latest
         name: gogs
         ports:
         - containerPort: 3000
